style.css
html, body{
  margin:0;
  padding:0;
  margin-bottom: -5px;
  scroll-behavior: smooth;
}

.full-body-header{
  height: 100vh;
  width: 100%;
  background-image: url("rose-5165415_1280.jpg");
  background-size: cover;
  color:rgb(255, 255, 255);
  background-position: right;
}

.items a{
  margin:0px 10px 0px 10px;
  font-weight: bolder;
}

         /*SLIKI ZA ABOUT ME*/

#about{
  padding: 80px 0;
  color: rgb(255, 255, 255);
}

.row{
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.about-col-1{
  flex-basis: 35%;
}

.about-col-1 image{
  width: 100%;
  border-radius: 15%;
}

.about-col-2{
  flex-basis: 60%;
}
.sub-title{
  font-size: 60px;
  font-weight: 600;
  color: white;
}

div.desc {
  padding: 15px;
  text-align: center;
}

.carousel-item {
  /*height: 60vh;*/
  object-fit: contain;
  overflow: hidden;
  width: 100%;
}

